--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-profile-page",
   "version": "0.1.0",
+  "homepage": "https://agupta2095.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
